# freespace

./: .gitignore  AGENTS.md  Cargo.toml  IDEAS.md  MODULES.md  NEXT_STEPS.md  PRD.md  README.md  RELEASE.md  TECHNICAL_SPECS.md  VISION.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: configuration.md
ideas/: permission-pre-check.md
scripts/ralph/: progress.txt
src/: app.rs  config.rs  lib.rs  main.rs
src/app/: drill.rs  filter.rs  mod.rs  types.rs
src/core/: audit.rs  cache.rs  cleaner.rs  engine.rs  mod.rs  paths.rs  safety.rs  scanner.rs
src/module/: installer.rs  manager.rs  manifest.rs  mod.rs  runtime.rs  source.rs
src/tui/: mod.rs  theme.rs
src/tui/views/: cleanup_confirm.rs  cleanup_progress.rs  file_browser.rs  filter_menu.rs  flat_view.rs  help.rs  info.rs  install_select.rs  mod.rs  module_detail.rs  module_list.rs
src/tui/widgets/: mod.rs  shared.rs  size_fmt.rs
task/: mise.md  release-workflow.md
tasks/: brew.md  confirmation.md  curl.md  header-improvement.md  info-pane.md  install-selection-ux.md  keybindings-helper.md  mise.md  module-id.md  multiple-paths-prd.md  multiple-paths.md  prd-freespace-mvp.md  prd.json  progress.txt  security-audit.md  system-free-space.md  tags-prd.md  tags.md  version-display.md
tests/: module_install.rs  scanner_integration.rs
tests/fixtures/modules/invalid-module/: module.toml
tests/fixtures/modules/local-target-module/: module.toml
tests/fixtures/modules/multi-module/alpha/: module.toml
tests/fixtures/modules/single-module/: module.toml
(+1 files in other folders)
