[package]
name = "freespace"
version = "0.1.0"
edition = "2021"
description = "Interactive terminal interface for browsing and cleaning disk space consumers"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
glob = "0.3"
humansize = "2"
anyhow = "1"
thiserror = "2"
dirs = "6"
trash = "5"
dialoguer = "0.11"
